[Feature] Discover Lance tables through Namespace REST catalogs
Signed-off-by: Beinan <soros.wang@yahoo.com>